src/objects/ints__TUCR_CreditSummaryDetail__c.object
<CustomObject>
    <fields>
        <fullName>ints__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__HighCredit__c</fullName>
        <label>High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__MonthlyPayment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__PastDue__c</fullName>
        <label>Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__PercentageAvailable__c</fullName>
        <label>Percentage Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>TUCR_Credit_Summary_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TUCR Credit Summary Detail</label>
    <nameField>
        <displayFormat>TUCR_CSD-{000000000}</displayFormat>
        <label>TUCR CreditSummaryDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Credit Summary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>